src/objects/QPMS__Suspect_Products__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Biosimilar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Biosimilar</description>
        <inlineHelpText>Biosimilar</inlineHelpText>
        <label>Biosimilar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__ComplaintId__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Complaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComplaintId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Compounded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Compounded</description>
        <inlineHelpText>Compounded</inlineHelpText>
        <label>Compounded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Diagnosis_for_Use__c</fullName>
        <label>Diagnosis for Use</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Dose_Unit__c</fullName>
        <label>Dose Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kg Kilogram(S)</fullName>
                </value>
                <value>
                    <fullName>G Gram(S)</fullName>
                </value>
                <value>
                    <fullName>Mg Milligram(S)</fullName>
                </value>
                <value>
                    <fullName>mu Microgram(S)</fullName>
                </value>
                <value>
                    <fullName>ng Nanogram(S)</fullName>
                </value>
                <value>
                    <fullName>pg Picogram(S)</fullName>
                </value>
                <value>
                    <fullName>mg/kg milligram(S)/kilogram</fullName>
                </value>
                <value>
                    <fullName>μg/kg microgram(s)/kilogram</fullName>
                </value>
                <value>
                    <fullName>mg/m2 milligram(s)/sq. meter</fullName>
                </value>
                <value>
                    <fullName>μg/ m2 microgram(s)/ sq. meter</fullName>
                </value>
                <value>
                    <fullName>l litre(s)</fullName>
                </value>
                <value>
                    <fullName>ml millilitre(s)</fullName>
                </value>
                <value>
                    <fullName>μl microlitre(s)</fullName>
                </value>
                <value>
                    <fullName>Bq becquerel(s)</fullName>
                </value>
                <value>
                    <fullName>GBq gigabecquerel(s)</fullName>
                </value>
                <value>
                    <fullName>MBq megabecquerel(s)</fullName>
                </value>
                <value>
                    <fullName>Kbq kilobecquerel(s)</fullName>
                </value>
                <value>
                    <fullName>Ci curie(s)</fullName>
                </value>
                <value>
                    <fullName>MCi millicurie(s)</fullName>
                </value>
                <value>
                    <fullName>μCi microcurie(s)</fullName>
                </value>
                <value>
                    <fullName>NCi nanocurie(s)</fullName>
                </value>
                <value>
                    <fullName>Mol mole(s)</fullName>
                </value>
                <value>
                    <fullName>Mmol millimole(s)</fullName>
                </value>
                <value>
                    <fullName>μmol micromole(s)</fullName>
                </value>
                <value>
                    <fullName>Iu international unit(s)</fullName>
                </value>
                <value>
                    <fullName>Kiu iu(1000s)</fullName>
                </value>
                <value>
                    <fullName>Miu iu(1,000,000s)</fullName>
                </value>
                <value>
                    <fullName>iu/kg iu/kilogram</fullName>
                </value>
                <value>
                    <fullName>Meq milliequivalent(s)</fullName>
                </value>
                <value>
                    <fullName>% percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Dose__c</fullName>
        <description>Dose</description>
        <inlineHelpText>Dose</inlineHelpText>
        <label>Dose</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Drug_Sequence_Number__c</fullName>
        <label>Drug Sequence Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Enter_Approval_Number__c</fullName>
        <description>Enter Approval Number</description>
        <inlineHelpText>Enter Approval Number</inlineHelpText>
        <label>Enter Approval Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Event_Abated__c</fullName>
        <label>Event Abated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Does not Apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Event_Reappeared_After_Reintroduction__c</fullName>
        <label>Event Reappeared After Reintroduction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Does not Apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Expiration_Date__c</fullName>
        <description>Expiration Date</description>
        <inlineHelpText>Expiration Date</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <formula>TEXT(QPMS__Regulatory_Report__r.QPMS__Follow_Up_Number__c)</formula>
        <label>Follow Up Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Frequency_Unit_definition_of_interval__c</fullName>
        <description>Frequency Unit (definition of the interval)</description>
        <inlineHelpText>Frequency Unit (definition of the interval)</inlineHelpText>
        <label>Frequency Unit (definition of interval)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Frequency__c</fullName>
        <description>Frequency (number of units in the interval)</description>
        <inlineHelpText>Frequency (number of units in the interval)</inlineHelpText>
        <label>Frequency (number of units in interval)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Generic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Generic</description>
        <inlineHelpText>Generic</inlineHelpText>
        <label>Generic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__If_IND_Pre_ANDA_Give_Protocol__c</fullName>
        <description>If IND/Pre-ANDA, Give Protocol #</description>
        <inlineHelpText>If IND/Pre-ANDA, Give Protocol #</inlineHelpText>
        <label>If IND/Pre-ANDA, Give Protocol #</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Lot__c</fullName>
        <label>Lot #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_Compounder__c</fullName>
        <label>Manufacturer/Compounder</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__NDC_or_Unique_ID__c</fullName>
        <label>NDC# or Unique ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Name__c</fullName>
        <label>Name and Strength</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_of_separate_dosages__c</fullName>
        <description>Number of separate dosages</description>
        <inlineHelpText>Number of separate dosages</inlineHelpText>
        <label>Number of separate dosages</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__OTC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OTC</description>
        <inlineHelpText>OTC</inlineHelpText>
        <label>OTC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Pre_1938__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pre-1938</description>
        <inlineHelpText>Pre-1938</inlineHelpText>
        <label>Pre-1938</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Pre_ANDA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pre-ANDA</description>
        <inlineHelpText>Pre-ANDA</inlineHelpText>
        <label>Pre-ANDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Regulatory_Body__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>holds the regulatory report value</description>
        <label>Regulatory Report</label>
        <referenceTo>QPMS__Regulatory_Report__c</referenceTo>
        <relationshipLabel>Suspect Products</relationshipLabel>
        <relationshipName>Suspect_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Rout_Used__c</fullName>
        <description>Rout Used</description>
        <inlineHelpText>Rout Used</inlineHelpText>
        <label>Rout Used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auricular (otic)</fullName>
                </value>
                <value>
                    <fullName>Buccal</fullName>
                </value>
                <value>
                    <fullName>Cutaneous</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Endocervical</fullName>
                </value>
                <value>
                    <fullName>Endosinusial</fullName>
                </value>
                <value>
                    <fullName>Endotracheal</fullName>
                </value>
                <value>
                    <fullName>Epidural</fullName>
                </value>
                <value>
                    <fullName>Extra-amniotic</fullName>
                </value>
                <value>
                    <fullName>Hemodialysis</fullName>
                </value>
                <value>
                    <fullName>Intra corpus cavernosum</fullName>
                </value>
                <value>
                    <fullName>Intra-amniotic</fullName>
                </value>
                <value>
                    <fullName>Intra-arterial</fullName>
                </value>
                <value>
                    <fullName>Intra-articular</fullName>
                </value>
                <value>
                    <fullName>Intra-uterine</fullName>
                </value>
                <value>
                    <fullName>Intracardiac</fullName>
                </value>
                <value>
                    <fullName>Intracavernous</fullName>
                </value>
                <value>
                    <fullName>Intracerebral</fullName>
                </value>
                <value>
                    <fullName>Intracervical</fullName>
                </value>
                <value>
                    <fullName>Intracisternal</fullName>
                </value>
                <value>
                    <fullName>Intracorneal</fullName>
                </value>
                <value>
                    <fullName>Intracoronary</fullName>
                </value>
                <value>
                    <fullName>Intradermal</fullName>
                </value>
                <value>
                    <fullName>Intradiscal (intraspinal)</fullName>
                </value>
                <value>
                    <fullName>Intrahepatic</fullName>
                </value>
                <value>
                    <fullName>Intralesional</fullName>
                </value>
                <value>
                    <fullName>Intralymphatic</fullName>
                </value>
                <value>
                    <fullName>Intramedullar (bone marrow)</fullName>
                </value>
                <value>
                    <fullName>Intrameningeal</fullName>
                </value>
                <value>
                    <fullName>Intramuscular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Select_the_drug_type_if_known__c</fullName>
        <label>Select the drug type (if known)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>ANDA</fullName>
                </value>
                <value>
                    <fullName>BLA</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Therapy_Dates__c</fullName>
        <label>Therapy Dates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__To__c</fullName>
        <description>Treatment Dates/Therapy Dates (give length of treatment (start/stop) or your best estimate)</description>
        <inlineHelpText>Treatment Dates/Therapy Dates (give length of treatment (start/stop) or your best estimate)</inlineHelpText>
        <label>To</label>
        <type>Date</type>
    </fields>
    <label>Suspect Product</label>
    <nameField>
        <label>Suspect Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suspect Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>